# blinko

./: .babelrc  .dockerignore  .env.tmpl  .gitignore  .prettierrc  .releaserc.json  CHANGELOG.md  DEV.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  bun.lockb  docker-compose.localtest.yml  docker-compose.prod.yml  docker-compose.yml  dockerfile  dump.sql  index.html  init.js  install.sh  next-env.d.ts  next.config.js  package.json  pnpm-lock.yaml  seed.js  tailwind.config.js  tsconfig.blinko.json  tsconfig.json  tsconfig.seed.json  tsconfig.types.json  turbo.json  update-latest-version.sh  update.sh  vercel.json
.blinko/: dump.sql
.blinko/faiss/: docstore.json  faiss.index
.blinko/files/: SECURITY.md
.blinko/pgdump/: bak-v0.0.1.sql
.circleci/: config.yml
.cursor/rules/: coding-standards.mdc  frontend-development-guide.mdc  project-structure.mdc
.github/: FUNDING.yml
app/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: App.tsx  (+2 more)
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
blinko-types/: package.json
helm/: .helmignore  Chart.yaml  README.md  values.yaml
prisma/: resetpassword.ts  schema.prisma  seed.d.ts  seed.ts  seedData.d.ts  seedData.ts  tsconfig.json
public/: manifest.json  sw.js  sw.js.map
server/: context.d.ts  context.ts  esbuild.config.ts  index.ts  package.json  prisma.d.ts  prisma.ts  swagger.ts  tsconfig.json  tsconfig.trpc.json
shared/: index.ts  tsconfig.json
src/: type.d.ts
(+663 files in other folders)
